--- a/symfony-project/templates/company/index.html.twig
+++ b/symfony-project/templates/company/index.html.twig
@@ -56,9 +56,9 @@
 							<li>
 								<a class="text-white" href="">Statistiques</a>
 							</li>
-							{# <li>
-																																																																														<a class="text-white" href="">Mes fiches</a>
-																																																																													</li> #}
+							<li>
+								<a class="text-white" href="">Favoris</a>
+							</li>
 							<li class="has-children">
 								<a href="#" class="text-white">Mon compte</a>
 								<ul class="dropdown">
@@ -67,6 +67,9 @@
 									</li>
 									<li>
 										<a class="text-black text-bold" style="cursor:pointer;" href="{{path('inscription-company')}}">Inscription</a>
+									</li>
+									<li>
+										<a class="text-black text-bold" style="cursor:pointer;" href="{{path('app_favori_company')}}">Mes favoris</a>
 									</li>
 								</ul>
 							</li>
