--- a/symfony-project/templates/company/inscription-company.html.twig
+++ b/symfony-project/templates/company/inscription-company.html.twig
@@ -44,6 +44,9 @@
 										<li>
 											<a class="text-black" style="cursor:pointer;" href="{{path('inscription-company')}}">Inscription</a>
 										</li>
+										<li>
+											<a class="text-black" style="cursor:pointer;" href="{{path('app_favori_company')}}">Mes favoris</a>
+										</li>
 									</ul>
 								</li>
 							</ul>
