--- a/symfony-project/templates/profil/index.html.twig
+++ b/symfony-project/templates/profil/index.html.twig
@@ -108,11 +108,11 @@
 			</nav>
 		</div>
 
-		<div class="container" style="margin-top:10rem;">
+		<div class="section-grey bg-light" id="blog-section" style="display:flex; flex-direction:column; justify-content:center; align-items:center; width:100vw ; padding:3rem; margin-top:5rem">
 
 			<div class="container mt-5">
 				<div class="text-center mb-4">
-					<h4 class="font-weight-bold">Matching</h4>
+					<h4 class="font-weight-bold">Consultez les profils</h4>
 					<p class="text-muted">Trouvez les développeurs correspondant à vos critères</p>
 				</div>
 
@@ -176,6 +176,9 @@
 									</p>
 									<a href="{{ path('developer_detail', {id: developer.id}) }}" class="btn btn-primary text-white btn-sm">
 										Voir le profil
+									</a>
+									<a href="{{ path('company_add_fiche_favoris', {developperId: developer.id}) }}">
+										Ajouter
 									</a>
 								</div>
 							</div>
