profil & matching & search ✅

--- a/symfony-project/templates/developer/inscription.html.twig
+++ b/symfony-project/templates/developer/inscription.html.twig
@@ -47,6 +47,9 @@
 									<li>
 										<a class="text-black" style="cursor:pointer;" href="{{path('app_inscription')}}">Inscription</a>
 									</li>
+										<li>
+										<a class="text-black" style="cursor:pointer;" href="{{path('app_developer_profile')}}">Profil</a>
+									</li>
 								</ul>
 							</li>
 						</ul>
