--- a/symfony-project/templates/developer/offre.html.twig
+++ b/symfony-project/templates/developer/offre.html.twig
@@ -94,6 +94,9 @@
 									<li>
 										<a class="text-black" style="cursor:pointer;" href="">Inscription</a>
 									</li>
+										<li>
+										<a class="text-black" style="cursor:pointer;" href="{{path('app_developer_profile')}}">Profil</a>
+									</li>
 								</ul>
 							</li>
 						</ul>
@@ -120,7 +123,7 @@
 								<img src="https://www.digital-aquitaine.com/wp-content/uploads/2024/12/CAPGEMINI47976684200187.png" class="card-img-top" alt="Offre Image">
 								<div class="card-body">
 									<h3>
-										{{ fiche.entreprise.nom }}</h3>
+										{# {{ fiche.entreprise.nom }}</h3> #}
 
 									<h5 class="card-title">{{ fiche.titre }}</h5>
 									<p class="card-text">
