--- a/symfony-project/templates/favori/favoris_entreprise.html.twig
+++ b/symfony-project/templates/favori/favoris_entreprise.html.twig
@@ -1,11 +1,26 @@
-<!DOCTYPE html>
-<html lang="fr">
-
+<!doctype html>
+<html lang="en">
 	<head>
-		<meta charset="UTF-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<link rel="stylesheet" href="{{ asset('css/bootstrap.min.css') }}">
-		<link rel="stylesheet" href="{{ asset('css/style.css') }}">
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+		<meta name="inscriptionor" content="Untree.co">
+		<link rel="shortcut icon" href="https://cdn0.iconfinder.com/data/icons/job-seeker/256/choose_job_seeker_employee_unemployee_work-512.png">
+
+		<meta name="description" content=""/>
+		<meta name="keywords" content="Boostrap"/>
+
+
+		<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&display=swap" rel="stylesheet">
+
+		<link rel="stylesheet" href="css/bootstrap.min.css">
+		<link rel="stylesheet" href="css/owl.carousel.min.css">
+		<link rel="stylesheet" href="css/owl.theme.default.min.css">
+		<link rel="stylesheet" href="fonts/icomoon/style.css">
+		<link rel="stylesheet" href="fonts/feather/style.css">
+		<link rel="stylesheet" href="fonts/flaticon/font/flaticon.css">
+		<link rel="stylesheet" href="css/jquery.fancybox.min.css">
+		<link rel="stylesheet" href="css/aos.css">
+		<link rel="stylesheet" href="css/style.css">
 		<title>Inscription - AdopteUnDev</title>
 	</head>
 
@@ -31,9 +46,6 @@
 							</li>
 							<li>
 								<a class="text-black" href="{{path('create_fiche_de_poste')}}">Fiches de postes</a>
-							</li>
-							<li>
-								<a class="text-black" href="">Statistiques</a>
 							</li>
 							<li class="has-children">
 								<a href="#" class="text-black font-weight-bold">Mon compte</a>
