--- a/symfony-project/templates/notification/index.html.twig
+++ b/symfony-project/templates/notification/index.html.twig
@@ -22,7 +22,7 @@
 		<link rel="stylesheet" href="css/aos.css">
 		<link rel="stylesheet" href="css/style.css">
 
-		<title>AdopteUnDev</title>
+		<title>Vos notifications - AdopteUnDev</title>
 	</head>
 	<body>
 		<div class="container w-100" style="margin-bottom:5rem;width:100vw">
@@ -55,7 +55,6 @@
 							</li>
 							<li class="has-children">
 								<a href="#" class="text-black">Mon compte</a>
-								<span class="icon-user"></span>
 								<ul class="dropdown">
 									<li>
 										<a class="text-black" style="cursor:pointer;" href="{{path('app_developer_login')}}">Connexion</a>
