--- a/symfony-project/templates/company/connexion-entreprise.html.twig
+++ b/symfony-project/templates/company/connexion-entreprise.html.twig
@@ -16,14 +16,14 @@
 			<div class="col-md-5 d-flex justify-content-center align-items-center">
 				<div class="w-100">
 					<h2 class="text-center mb-4">Connexion</h2>
-					<form method="POST" action="{{ path('app_company_login') }}">
+					<form method="post" action="{{ path('app_company_login') }}">
 						<div class="form-group">
 							<label for="email">Adresse e-mail</label>
-							<input type="email" id="email" class="form-control" placeholder="Votre e-mail">
+							<input type="email" id="email" name="email" class="form-control" placeholder="Votre e-mail" required>
 						</div>
 						<div class="form-group">
 							<label for="password">Mot de passe</label>
-							<input type="password" id="password" class="form-control" placeholder="Votre mot de passe">
+							<input type="password" id="password" name="password" class="form-control" placeholder="Votre mot de passe" required>
 						</div>
 						<button type="submit" class="btn btn-primary btn-block">Se connecter</button>
 					</form>
