--- a/symfony-project/templates/company/dev-info.html.twig
+++ b/symfony-project/templates/company/dev-info.html.twig
@@ -53,10 +53,6 @@
 									<span class="icon-notifications"></span>
 								</a>
 							</li>
-							<li>
-								<a class="text-black" href="">Statistiques</a>
-							</li>
-
 							<li class="has-children">
 								<a href="#" class="text-black font-weight-bold">Mon compte</a>
 								<ul class="dropdown">
@@ -113,7 +109,7 @@
 						{{ developer.bio }}
 					</p>
 					<p class="mb-0">
-						<a href="mailto:{{ developer.email }}" class="btn btn-primary mt-2">Contacter</a>
+						<a class="btn btn-primary text-white mt-2">Contacter</a>
 					</p>
 				</div>
 			</div>
