--- a/symfony-project/templates/company/index.html.twig
+++ b/symfony-project/templates/company/index.html.twig
@@ -54,9 +54,6 @@
 								</a>
 							</li>
 							<li>
-								<a class="text-white" href="">Statistiques</a>
-							</li>
-							<li>
 								<a class="text-white" href="">Favoris</a>
 							</li>
 							<li class="has-children">
@@ -87,15 +84,25 @@
 		<div class="hero-slant overlay" data-stellar-background-ratio="0.5" style="background-image: url(https://img.freepik.com/free-vector/recruitment-concept-illustration_114360-24595.jpg?ga=GA1.1.73765508.1719503126&semt=ais_hybrid)">
 
 			<div class="container">
+
 				<div class="row align-items-center justify-content-between">
+
 					<div class="col-lg-7 intro">
+						{% if company %}
+							<h2 class="text-black font-weight-bold mb-4" data-aos="fade-up" data-aos-delay="0">
+								Bienvenue
+								{{ company.nom }}
+							</h2>
+						{% endif %}
 						<h1 class="text-white font-weight-bold mb-4" data-aos="fade-up" data-aos-delay="0">
 							Découvrez vos futurs collaborateurs.</h1>
 						<p class="text-white mb-4" data-aos="fade-up" data-aos-delay="100">Nous vous connectons à vos futurs talents pour des innovations plus accentuées.</p>
 
 					</div>
 				</div>
+
 			</div>
+
 
 			<div class="slant" style="background-image: url('images/slant.svg');"></div>
 		</div>
@@ -160,6 +167,7 @@
 					<p class="text-center text-muted">Aucun développeur disponible pour le moment.</p>
 				{% endfor %}
 			</div>
+
 		</div>
 
 		<div class="site-section bg-light" id="profiles-section">
