--- a/symfony-project/templates/company/inscription-company.html.twig
+++ b/symfony-project/templates/company/inscription-company.html.twig
@@ -32,9 +32,6 @@
 								<li>
 									<a class="text-black" href="{{path('create_fiche_de_poste')}}">Fiches de postes</a>
 								</li>
-								<li>
-									<a class="text-black" href="">Statistiques</a>
-								</li>
 								<li class="has-children">
 									<a href="#" class="text-black font-weight-bold">Mon compte</a>
 									<ul class="dropdown">
@@ -57,8 +54,8 @@
 				</nav>
 			</div>
 
-			<div class="container d-flex justify-content-center align-items-center min-vh-100" style="margin-top:5rem">
-				<div class="register-card shadow p-4 rounded w-75 w-md-50 w-lg-40">
+		<div class="section-grey bg-light" id="blog-section" style="display:flex; flex-direction:column; justify-content:center; align-items:center; width:100vw ; padding:3rem; margin-top:5rem">
+				<div class="register-card bg-white shadow p-4 rounded w-75 w-md-50 w-lg-40">
 					<h2 class="text-center mb-4 text-primary h4">Inscrivez votre entreprise sur AdopteUnDev</h2>
 					<form action="{{ path('inscription-company') }}" method="POST" enctype="multipart/form-data">
 						<div class="form-row">
