--- a/symfony-project/templates/developer/profile.html.twig
+++ b/symfony-project/templates/developer/profile.html.twig
@@ -1,9 +1,9 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-		<meta name="author" content="Untree.co">
+		<meta name="inscriptionor" content="Untree.co">
 		<link rel="shortcut icon" href="https://cdn0.iconfinder.com/data/icons/job-seeker/256/choose_job_seeker_employee_unemployee_work-512.png">
 
 		<meta name="description" content=""/>
@@ -21,7 +21,8 @@
 		<link rel="stylesheet" href="css/jquery.fancybox.min.css">
 		<link rel="stylesheet" href="css/aos.css">
 		<link rel="stylesheet" href="css/style.css">
-		<title>Détails de l'offre - AdopteUnDev</title>
+
+		<title>Job Teaser</title>
 	</head>
 	<body>
 
@@ -39,7 +40,7 @@
 								<a class="text-black" href="{{path('app_developer')}}">Accueil</a>
 							</li>
 							<li class="active">
-								<a class="text-black font-weight-bold" href="{{path('app_offre')}}">Offres</a>
+								<a class="text-black" href="{{path('app_offre')}}">Offres</a>
 							</li>
 							<li class="active">
 								<a class="text-black" href="{{path('app_matching')}}">Matching</a>
@@ -54,13 +55,16 @@
 								<a class="text-black" href="{{path('app_favori')}}">Favoris</a>
 							</li>
 							<li class="has-children">
-								<a href="#" class="text-black">Mon compte</a>
+								<a href="#" class=" text-black font-weight-bold">Mon compte</a>
 								<ul class="dropdown">
 									<li>
 										<a class="text-black" style="cursor:pointer;" href="{{path('app_developer_login')}}">Connexion</a>
 									</li>
 									<li>
 										<a class="text-black" style="cursor:pointer;" href="{{path('app_inscription')}}">Inscription</a>
+									</li>
+									<li>
+										<a class="text-black" style="cursor:pointer;" href="{{path('app_developer_profile')}}">Profil</a>
 									</li>
 								</ul>
 							</li>
@@ -72,38 +76,72 @@
 			</nav>
 		</div>
 
-		<div class="site-section bg-light d-flex">
-			<div class="container">
-				<div class="card shadow-lg">
-					<div class="card-header bg-primary text-white text-center">
-						<h2 class="mb-0 text-white">{{ fiche.titre }}</h2>
+		<div class="section-grey bg-light" id="profile-section" style="padding: 3rem; margin-top: 5rem; display: flex; justify-content: center; align-items: center; width: 100%;">
+			<div class="card shadow-lg p-4 rounded" style="max-width: 700px; width: 100%;">
+				<div class="card-body">
+					<h5 class="text-primary mb-3">Informations personnelles</h5>
+					<ul class="list-group mb-4">
+						<li class="list-group-item">
+							<strong>
+								<i class="fas fa-user"></i>
+								Nom :</strong>
+							{{ developer.nom }}
+						</li>
+						<li class="list-group-item">
+							<strong>
+								<i class="fas fa-user"></i>
+								Prenom :</strong>
+							{{ developer.prenom }}
+						</li>
+						<li class="list-group-item">
+							<strong>
+								<i class="fas fa-map-marker-alt"></i>
+								Localisation :</strong>
+							{{ developer.localisation }}
+						</li>
+						<li class="list-group-item">
+							<strong>
+								<i class="fas fa-envelope"></i>
+								Vu du profil :</strong>
+							{{ developer.views}}
+							<span class="icon-eye"></span>
+
+						</li>
+						<li class="list-group-item">
+							<strong>
+								<i class="fas fa-briefcase"></i>
+								Niveau d'expérience :</strong>
+							{{ developer.experience }}
+							ans
+						</li>
+						<li class="list-group-item">
+							<strong>
+								<i class="fas fa-euro-sign"></i>
+								Salaire minimum souhaité :</strong>
+							{{ developer.salaireMin }}
+							€
+						</li>
+					</ul>
+
+					<h5 class="text-primary mb-3">Compétences</h5>
+					<div class="mb-4">
+						<span class="badge fs-3 bg-secondary text-white p-3 me-2 mb-2">{{ developer.languages }}</span>
 					</div>
-					<div class="card-body">
-						<h4 class="text-primary">Informations générales</h4>
-						<p>
-							<strong>Localisation :</strong>
-							{{ fiche.localisation }}</p>
-						<p>
-							<strong>Technologies :</strong>
-							{{ fiche.technologies }}</p>
-						<p>
-							<strong>Niveau d'expérience :</strong>
-							{{ fiche.niveauExperience }}
-							ans</p>
-						<p>
-							<strong>Salaire proposé :</strong>
-							{{ fiche.salairePropose }}</p>
-						<p>
-							<strong>Description :</strong>
-							{{ fiche.description }}</p>
-						<div class="text-center mt-4">
-							<a href="{{ path('app_success') }}" class="btn btn-primary btn-lg">Candidature simplifiée</a>
-							<a href="{{ path('app_success') }}" class="btn btn-outline-primary btn-lg ml-2">Enregistrer</a>
-						</div>
-					</div>
+
+					<h5 class="text-primary mb-3">Biographie</h5>
+					<p class="text-muted">{{ developer.bio }}</p>
 				</div>
+
+				<!-- Edit Profile Button -->
+				{# <div class="card-footer text-center">
+									<a href="{{ path('edit_profile') }}" class="btn btn-primary">
+										<i class="fas fa-edit"></i>
+										Modifier mon profil
+									</a>
+								</div> #}
 			</div>
 		</div>
+
 
 		<div class="site-footer text-white">
 			<div class="container">
@@ -150,7 +188,7 @@
 								<div class="widget">
 									<ul class="links list-unstyled">
 										<li>
-											<a href="{{path('app_developer')}}">Accueil</a>
+											<a href="{{path('app_offre')}}">Accueil</a>
 										</li>
 										<li>
 											<a href="{{path('app_offre')}}">Offres</a>
@@ -191,12 +229,11 @@
 						</div>
 					</div>
 				</div>
+
 			</div>
 		</div>
-
 	</body>
 </html></div><div id="overlayer"></div><div class="loader">
 <div class="spinner-border" role="status">
 	<span class="sr-only">Loading...</span>
-
 </div></div><script src="{{ asset("js/jquery-3.5.1.min.js") }}"></script><script src="{{asset("js/jquery-migrate-3.0.0.min.js")}}"></script><script src="{{asset("js/popper.min.js")}}"></script><script src="{{asset("js/bootstrap.min.js")}}"></script><script src="{{asset("js/owl.carousel.min.js")}}"></script><script src="{{asset("js/aos.js")}}"></script><script src="{{asset("js/imagesloaded.pkgd.js")}}"></script><script src="{{asset("js/isotope.pkgd.min.js")}}"></script><script src="{{asset("js/jquery.animateNumber.min.js")}}"></script><script src="{{asset("js/jquery.stellar.min.js")}}"></script><script src="{{asset("js/jquery.waypoints.min.js")}}"></script><script src="{{asset("js/jquery.fancybox.min.js")}}"></script><script src="{{asset("js/custom.js")}}"></script></body></html>
