--- a/symfony-project/templates/developer/show.html.twig
+++ b/symfony-project/templates/developer/show.html.twig
@@ -22,14 +22,14 @@
 		<link rel="stylesheet" href="css/aos.css">
 		<link rel="stylesheet" href="css/style.css">
 
-		<title>Job Teaser</title>
+		<title>Mon profil</title>
 	</head>
-	<body>
 
-		<div class="container">
-			<nav class="site-nav">
+	<body>
+		<div class="container w-100" style="margin-bottom:5rem;width:100vw">
+			<nav class="site-nav" style="width:100vw;">
 				<div class="logo">
-					<a class="text-black text-bold">AdopteUnDev<span class="text-black text-bold">.</span>
+					<a class="text-black">AdopteUnDev<span class="text-black">.</span>
 					</a>
 				</div>
 				<div class="row align-items-center">
@@ -37,26 +37,31 @@
 					<div class="col-12 col-sm-12 col-lg-12 site-navigation text-center">
 						<ul class="js-clone-nav d-none d-lg-inline-block text-left site-menu">
 							<li>
-								<a class="text-black text-bold" href="{{path('app_company')}}">Accueil</a>
+								<a class="text-black" href="{{path('app_developer')}}">Accueil</a>
 							</li>
 							<li class="active">
-								<a class="text-black text-bold font-weight-bold" href="{{path('app_profil')}}">Profils</a>
+								<a class="text-black font-weight-bold" href="{{path('app_offre')}}">Offres</a>
 							</li>
 							<li class="active">
-								<a class="text-black text-bold" href="{{path('match-dev')}}">Matching</a>
+								<a class="text-black" href="{{path('app_matching')}}">Matching</a>
 							</li>
 							<li>
-								<a class="text-black text-bold" href="">Statistiques</a>
+								<a class="text-black" href="{{path('app_favori')}}">Favoris</a>
 							</li>
-
+							<li>
+								<a class="text-black" href="{{ path('app_notifications') }}">
+									Notifications
+									<span class="icon-notifications"></span>
+								</a>
+							</li>
 							<li class="has-children">
 								<a href="#" class="text-black">Mon compte</a>
 								<ul class="dropdown">
 									<li>
-										<a class="text-black text-bold" style="cursor:pointer;" href="{{path('app_company_login')}}">Connexion</a>
+										<a class="text-black" style="cursor:pointer;" href="{{path('app_inscription')}}">Connexion</a>
 									</li>
 									<li>
-										<a class="text-black text-bold" style="cursor:pointer;" href="{{path('inscription-company')}}">Inscription</a>
+										<a class="text-black" style="cursor:pointer;" href="">Inscription</a>
 									</li>
 								</ul>
 							</li>
@@ -68,54 +73,7 @@
 			</nav>
 		</div>
 
-		<div class="container" style="margin-top:10rem;">
-
-			<div class="team row">
-				<div class="col-md-4 col-lg-3 pic">
-					<img src="images/person_1-min.jpg" alt="Image" class="w-95 img-fluid">
-				</div>
-
-				<div class="col-md-8 col-lg-9">
-					<h3>
-						<a href="#">
-							<span class="">Augustin</span>
-							Rio</a>
-					</h3>
-
-					<span class="d-block position">Data Scientist Senior</span>
-					<p>
-						<strong>Localisation:</strong>
-						Paris, France</p>
-
-					<p>
-						<strong>Langages de programmation:</strong>
-						<span class="badge badge-primary">JavaScript</span>
-						<span class="badge badge-secondary">Python</span>
-						<span class="badge badge-success">React</span>
-					</p>
-
-					<p>
-						<strong>Niveau d'expérience:</strong>
-						<span>5 ans</span>
-
-					</p>
-					<p>
-						<strong>Salaire minimum souhaité:</strong>
-						45000€</p>
-				</div>
-				<div>
-					<p>
-						<strong>Biographie:</strong>
-						Passionné par les technologies web, je possède une expertise approfondie en développement full-stack. Avec une expérience diversifiée, j'ai contribué à plusieurs projets majeurs dans le domaine de la conception et du développement d'applications web, tout en collaborant avec des équipes internationales sur des solutions innovantes.</p>
-				</div>
-
-				<p class="mb-0">
-
-					<a href="mailto:jeremy.walker@example.com" class="btn btn-primary mt-2">Contacter</a>
-				</p>
-			</div>
-		</div>
-
+        
 
 		<div class="site-footer text-white">
 			<div class="container">
@@ -162,7 +120,7 @@
 								<div class="widget">
 									<ul class="links list-unstyled">
 										<li>
-											<a href="{{path('app_offre')}}">Accueil</a>
+											<a href="{{path('app_developer')}}">Accueil</a>
 										</li>
 										<li>
 											<a href="{{path('app_offre')}}">Offres</a>
@@ -204,10 +162,22 @@
 					</div>
 				</div>
 
+				<div class="text-center" copyright">
+					<div class="col-md-8">
+						<p>Copyright &copy;<script>
+								document.write(new Date().getFullYear());
+							</script>. Tous droits réservés.
+							<a href="{{path('app_offre')}}"></a>
+						</p>
+
+					</div>
+				</div>
 			</div>
 		</div>
+
 	</body>
 </html></div><div id="overlayer"></div><div class="loader">
 <div class="spinner-border" role="status">
 	<span class="sr-only">Loading...</span>
+
 </div></div><script src="{{ asset("js/jquery-3.5.1.min.js") }}"></script><script src="{{asset("js/jquery-migrate-3.0.0.min.js")}}"></script><script src="{{asset("js/popper.min.js")}}"></script><script src="{{asset("js/bootstrap.min.js")}}"></script><script src="{{asset("js/owl.carousel.min.js")}}"></script><script src="{{asset("js/aos.js")}}"></script><script src="{{asset("js/imagesloaded.pkgd.js")}}"></script><script src="{{asset("js/isotope.pkgd.min.js")}}"></script><script src="{{asset("js/jquery.animateNumber.min.js")}}"></script><script src="{{asset("js/jquery.stellar.min.js")}}"></script><script src="{{asset("js/jquery.waypoints.min.js")}}"></script><script src="{{asset("js/jquery.fancybox.min.js")}}"></script><script src="{{asset("js/custom.js")}}"></script></body></html>
