--- a/symfony-project/templates/fiche_de_poste/index.html.twig
+++ b/symfony-project/templates/fiche_de_poste/index.html.twig
@@ -3,7 +3,20 @@
 
 	<head>
 		<meta charset="UTF-8">
+
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+		<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&display=swap" rel="stylesheet">
+
+		<link rel="stylesheet" href="css/bootstrap.min.css">
+		<link rel="stylesheet" href="css/owl.carousel.min.css">
+		<link rel="stylesheet" href="css/owl.theme.default.min.css">
+		<link rel="stylesheet" href="fonts/icomoon/style.css">
+		<link rel="stylesheet" href="fonts/feather/style.css">
+		<link rel="stylesheet" href="fonts/flaticon/font/flaticon.css">
+		<link rel="stylesheet" href="css/jquery.fancybox.min.css">
+		<link rel="stylesheet" href="css/aos.css">
+		<link rel="stylesheet" href="css/style.css">
 		<link rel="stylesheet" href="{{ asset('css/bootstrap.min.css') }}">
 		<link rel="stylesheet" href="{{ asset('css/style.css') }}">
 		<title>Inscription - AdopteUnDev</title>
@@ -36,9 +49,6 @@
 									Notifications
 									<span class="icon-notifications"></span>
 								</a>
-							</li>
-							<li>
-								<a class="text-black" href="">Statistiques</a>
 							</li>
 							<li class="has-children">
 								<a href="#" class="text-black font-weight-bold">Mon compte</a>
