--- a/symfony-project/templates/home/index.html.twig
+++ b/symfony-project/templates/home/index.html.twig
@@ -75,8 +75,12 @@
 			<div class="container">
 				<div class="row align-items-center justify-content-between">
 					<div class="col-lg-7 intro">
+
+
 						<h1 class="text-white font-weight-bold mb-4" data-aos="fade-up" data-aos-delay="0">Rencontrez vos futurs collaborateurs</h1>
 						<p class="text-white mb-4" data-aos="fade-up" data-aos-delay="100">Nous connectons entreprises et développeurs pour un avenir innovant.</p>
+
+
 					</div>
 
 
@@ -121,7 +125,29 @@
 
 		<div class="site-section overlay site-cover-2" style="background-image: url('images/img_v_3-min.jpg')">
 			<div class="container">
-				<div class="row"></div>
+				<div class="row">
+					<div class="col-md-4 order-md-2 column text-center">
+						<h2 class="text-white font-weight-bold mb-4" data-aos="fade-up" data-aos-delay="0">
+							<span class="text-bold text-white font-weight-bold">+</span>
+							{{ nombreDevs }}
+						</h2>
+						<h2 class="text-white font-weight-bold">Développeurs</h2>
+					</div>
+					<div class="col-md-4 text-center order-md-2">
+						<h2 class="text-white font-weight-bold mb-4" data-aos="fade-up" data-aos-delay="0">
+							<span class="text-bold">+</span>
+							{{ nombreEntreprises }}
+						</h2class="text-primarytext-bold">
+						<h2 class="text-white font-weight-bold">Entreprises</h2>
+					</div>
+					<div class="col-md-4 text-center order-md-2">
+						<h2 class="text-white font-weight-bold mb-4" data-aos="fade-up" data-aos-delay="0">
+							<span class="text-bold">+</span>
+							{{ offres }}
+						</h2>
+						<h2 class="text-white font-weight-bold">Offres</h2>
+					</div>
+				</div>
 			</div>
 		</div>
 
@@ -255,158 +281,155 @@
 										<img src="https://www.digital-aquitaine.com/wp-content/uploads/2024/12/CAPGEMINI47976684200187.png" class="card-img-top" alt="Offre Image">
 										<div class="card-body">
 											<h3>
-												{{ fiche.entreprise.nom }}</h3>
+												{# {{ fiche.entreprise.nom }}</h3> #}
 
-											<h5 class="card-title">{{ fiche.titre }}</h5>
-											<p class="card-text">
-												{{ fiche.description }}
-												<br>
-												{{ fiche.localisation }}
-											</p>
-											<a href="{{ path('app_detail', {'id': fiche.id}) }}" class="btn btn-primary btn-sm">Voir l'offre</a>
+												<h5 class="card-title">{{ fiche.titre }}</h5>
+												<p class="card-text">
+													{{ fiche.description }}
+													<br>
+													{{ fiche.localisation }}
+												</p>
+												<a href="{{ path('app_detail', {'id': fiche.id}) }}" class="btn btn-primary btn-sm">Voir l'offre</a>
+											</div>
 										</div>
 									</div>
-								</div>
-							{% endfor %}
+								{% endfor %}
+							</div>
 						</div>
-					</div>
 
-					<div class="row mt-5">
-						<div class="col-lg-4 mx-auto">
-							<a href="{{path('app_offre')}}" class="btn btn-primary btn-block">Voir plus</a>
+						<div class="row mt-5">
+							<div class="col-lg-4 mx-auto">
+								<a href="{{path('app_offre')}}" class="btn btn-primary btn-block">Voir plus</a>
+							</div>
 						</div>
 					</div>
 				</div>
 			</div>
-		</div>
 
-		<div class="site-footer text-white">
-			<div class="container">
-				<div class="row justify-content-between">
-					<div class="col-lg-4">
-						<div class="widget">
-							<h3>À propos</h3>
-							<p class="text-black">
-								AdopteUnDev, la plateforme qui connecte développeurs talentueux et entreprises ambitieuses pour un matching parfait. Rejoignez-nous pour construire un avenir numérique collaboratif !
+			<div class="site-footer text-white">
+				<div class="container">
+					<div class="row justify-content-between">
+						<div class="col-lg-4">
+							<div class="widget">
+								<h3>À propos</h3>
+								<p class="text-black">
+									AdopteUnDev, la plateforme qui connecte développeurs talentueux et entreprises ambitieuses pour un matching parfait. Rejoignez-nous pour construire un avenir numérique collaboratif !
+								</p>
+							</div>
+							<div class="widget">
+								<h3>Restez connecté</h3>
+								<ul class="social list-unstyled">
+									<li>
+										<a href="#">
+											<span class="icon-facebook"></span>
+										</a>
+									</li>
+									<li>
+										<a href="#">
+											<span class="icon-twitter"></span>
+										</a>
+									</li>
+									<li>
+										<a href="#">
+											<span class="icon-instagram"></span>
+										</a>
+									</li>
+									<li>
+										<a href="#">
+											<span class="icon-linkedin"></span>
+										</a>
+									</li>
+								</ul>
+							</div>
+						</div>
+
+						<div class="col-lg-2">
+							<div class="widget">
+								<h3>Pour les développeurs</h3>
+								<ul class="links list-unstyled">
+									<li>
+										<a href="#">Nous rejoindre</a>
+									</li>
+									<li>
+										<a href="#">Créer un profil</a>
+									</li>
+									<li>
+										<a href="#">Nos offres</a>
+									</li>
+									<li>
+										<a href="#">Favoris</a>
+									</li>
+									<li>
+										<a href="#">Contact support</a>
+									</li>
+								</ul>
+							</div>
+						</div>
+
+						<!-- Section Pour les entreprises -->
+						<div class="col-lg-2">
+							<div class="widget">
+								<h3>Pour les entreprises</h3>
+								<ul class="links list-unstyled">
+									<li>
+										<a href="#">Publier une offre</a>
+									</li>
+									<li>
+										<a href="#">Trouver un développeur</a>
+									</li>
+									<li>
+										<a href="#">Nos solutions</a>
+									</li>
+									<li>
+										<a href="#">Évaluer un développeur</a>
+									</li>
+									<li>
+										<a href="#">Assistance</a>
+									</li>
+								</ul>
+							</div>
+						</div>
+
+						<!-- Section Légal -->
+						<div class="col-lg-2">
+							<div class="widget">
+								<h3>Légal</h3>
+								<ul class="links list-unstyled">
+									<li>
+										<a href="#">Mentions légales</a>
+									</li>
+									<li>
+										<a href="#">Politique de confidentialité</a>
+									</li>
+									<li>
+										<a href="#">Conditions générales</a>
+									</li>
+									<li>
+										<a href="#">Politique de cookies</a>
+									</li>
+									<li>
+										<a href="#">FAQ</a>
+									</li>
+								</ul>
+							</div>
+						</div>
+					</div>
+
+					<!-- Bas de page -->
+					<div class="row mt-4">
+						<div class="col-12 text-center">
+							<p class="mb-0">
+								Copyright © AdopteUnDev 2024 - Tous droits réservés.
+								<a href="#">Mentions légales</a>
+								|
+								<a href="#">Cookies</a>
+								|
+								<a href="#">Confidentialité</a>
 							</p>
 						</div>
-						<div class="widget">
-							<h3>Restez connecté</h3>
-							<ul class="social list-unstyled">
-								<li>
-									<a href="#">
-										<span class="icon-facebook"></span>
-									</a>
-								</li>
-								<li>
-									<a href="#">
-										<span class="icon-twitter"></span>
-									</a>
-								</li>
-								<li>
-									<a href="#">
-										<span class="icon-instagram"></span>
-									</a>
-								</li>
-								<li>
-									<a href="#">
-										<span class="icon-linkedin"></span>
-									</a>
-								</li>
-							</ul>
-						</div>
-					</div>
-
-					<div class="col-lg-2">
-						<div class="widget">
-							<h3>Pour les développeurs</h3>
-							<ul class="links list-unstyled">
-								<li>
-									<a href="#">Nous rejoindre</a>
-								</li>
-								<li>
-									<a href="#">Créer un profil</a>
-								</li>
-								<li>
-									<a href="#">Nos offres</a>
-								</li>
-								<li>
-									<a href="#">Favoris</a>
-								</li>
-								<li>
-									<a href="#">Contact support</a>
-								</li>
-							</ul>
-						</div>
-					</div>
-
-					<!-- Section Pour les entreprises -->
-					<div class="col-lg-2">
-						<div class="widget">
-							<h3>Pour les entreprises</h3>
-							<ul class="links list-unstyled">
-								<li>
-									<a href="#">Publier une offre</a>
-								</li>
-								<li>
-									<a href="#">Trouver un développeur</a>
-								</li>
-								<li>
-									<a href="#">Nos solutions</a>
-								</li>
-								<li>
-									<a href="#">Évaluer un développeur</a>
-								</li>
-								<li>
-									<a href="#">Assistance</a>
-								</li>
-							</ul>
-						</div>
-					</div>
-
-					<!-- Section Légal -->
-					<div class="col-lg-2">
-						<div class="widget">
-							<h3>Légal</h3>
-							<ul class="links list-unstyled">
-								<li>
-									<a href="#">Mentions légales</a>
-								</li>
-								<li>
-									<a href="#">Politique de confidentialité</a>
-								</li>
-								<li>
-									<a href="#">Conditions générales</a>
-								</li>
-								<li>
-									<a href="#">Politique de cookies</a>
-								</li>
-								<li>
-									<a href="#">FAQ</a>
-								</li>
-							</ul>
-						</div>
-					</div>
-				</div>
-
-				<!-- Bas de page -->
-				<div class="row mt-4">
-					<div class="col-12 text-center">
-						<p class="mb-0">
-							Copyright © AdopteUnDev 2024 - Tous droits réservés.
-							<a href="#">Mentions légales</a>
-							|
-							<a href="#">Cookies</a>
-							|
-							<a href="#">Confidentialité</a>
-						</p>
 					</div>
 				</div>
 			</div>
-		</div>
-
+		</body>
 	</body>
-</html></div><div id="overlayer"></div><div class="loader">
-<div class="spinner-border" role="status">
-	<span class="sr-only">Loading...</span>
-</div></div><script src="js/jquery-3.5.1.min.js"></script><script src="js/jquery-migrate-3.0.0.min.js"></script><script src="js/popper.min.js"></script><script src="js/bootstrap.min.js"></script><script src="js/owl.carousel.min.js"></script><script src="js/aos.js"></script><script src="js/imagesloaded.pkgd.js"></script><script src="js/isotope.pkgd.min.js"></script><script src="js/jquery.animateNumber.min.js"></script><script src="js/jquery.stellar.min.js"></script><script src="js/jquery.waypoints.min.js"></script><script src="js/jquery.fancybox.min.js"></script><script src="js/custom.js"></script></body></html>
+</html></body></html></div><div id="overlayer"></div><div class="loader"><div class="spinner-border" role="status"><span class="sr-only">Loading...</span></div></div><script src="js/jquery-3.5.1.min.js"></script><script src="js/jquery-migrate-3.0.0.min.js"></script><script src="js/popper.min.js"></script><script src="js/bootstrap.min.js"></script><script src="js/owl.carousel.min.js"></script><script src="js/aos.js"></script><script src="js/imagesloaded.pkgd.js"></script><script src="js/isotope.pkgd.min.js"></script><script src="js/jquery.animateNumber.min.js"></script><script src="js/jquery.stellar.min.js"></script><script src="js/jquery.waypoints.min.js"></script><script src="js/jquery.fancybox.min.js"></script><script src="js/custom.js"></script></body></html>
