--- a/symfony-project/templates/matching/matching_entreprise.html.twig
+++ b/symfony-project/templates/matching/matching_entreprise.html.twig
@@ -54,10 +54,6 @@
 									<span class="icon-notifications"></span>
 								</a>
 							</li>
-							<li>
-								<a class="text-black" href="">Statistiques</a>
-							</li>
-
 							<li class="has-children">
 								<a href="#" class="text-black">Mon compte</a>
 								<ul class="dropdown">
@@ -79,56 +75,63 @@
 
 
 		<div class="section-grey bg-light" id="blog-section" style="display:flex; flex-direction:column; justify-content:center; align-items:center; width:100vw ; padding:3rem; margin-top:5rem">
-			<div class="container">
-				<div class="row">
-					<h2 class="font-weight-bold text-center">
-						<span class="text-primary">{{ company.nom }}</span>
-						matchez ces développeurs
 
-					</h2>
-				</div>
+			{% if company %}
 				<div class="container">
 					<div class="row">
-						{% if matches is empty %}
-							<p style="border-radius:0.3rem;" class="text-center text-white bg-info w-100 p-2">Aucun développeur ne correspond à vos offres pour l'instant.</p>
-						{% else %}
-							{% for match in matches %}
-								<div class="col-md-4">
-									<div class="card mb-3">
-										<div class="card-body">
-											<h5 class="card-title">{{ match.developer.nom }}
-												{{ match.developer.prenom }}</h5>
-											<p class="card-text">
-												<strong>Localisation :</strong>
-												{{ match.developer.localisation }}<br>
-												<strong>Expérience :</strong>
-												{{ match.developer.experience }}
-												ans<br>
-												<strong>Score de correspondance :</strong>
-												{{ match.score }}%
-											</p>
+						<h2 class="font-weight-bold text-center">
+							<span class="text-primary">{{ company.nom }}</span>
+							matchez ces développeurs
 
-											<h6 class="mt-3">Postes correspondants :</h6>
-											<ul>
-												{% for jobMatch in match.matchingJobs %}
-													<li>
-														<strong>{{ jobMatch.job.titre }}</strong>
-														(Score :
-														{{ jobMatch.score }}%)
-													</li>
-												{% endfor %}
-											</ul>
-											<a href="{{ path('developer_detail', {id: match.developer.id}) }}" class="btn btn-primary text-white btn-sm">
-												Voir le profil
-											</a>
+						</h2>
+					</div>
+					<div class="container">
+						<div class="row">
+							{% if matches is empty %}
+								<p style="border-radius:0.3rem;" class="text-center text-white bg-info w-100 p-2">Aucun développeur ne correspond à vos offres pour l'instant.</p>
+							{% else %}
+								{% for match in matches %}
+									<div class="col-md-4">
+										<div class="card mb-3">
+											<div class="card-body">
+												<h5 class="card-title">{{ match.developer.nom }}
+													{{ match.developer.prenom }}</h5>
+												<p class="card-text">
+													<strong>Localisation :</strong>
+													{{ match.developer.localisation }}<br>
+													<strong>Expérience :</strong>
+													{{ match.developer.experience }}
+													ans<br>
+												</p>
+
+												<h6 class="mt-3">Correspondance :
+												</h6>
+												<ul>
+													{% for jobMatch in match.matchingJobs %}
+														<li>
+															<strong>{{ jobMatch.job.titre }}</strong>
+															(Score :
+															{{ jobMatch.score }}%)
+														</li>
+													{% endfor %}
+												</ul>
+												<a href="{{ path('developer_detail', {id: match.developer.id}) }}" class="btn btn-primary text-white btn-sm">
+													Voir le profil
+												</a>
+											</div>
 										</div>
 									</div>
-								</div>
-							{% endfor %}
-						{% endif %}
+								{% endfor %}
+							{% endif %}
+						</div>
 					</div>
 				</div>
-			</div>
+			{% else %}
+				<h2 class="text-center text-white bg-primary p-2">
+					<i class="fa fa-search"></i>
+					Recherche de développeurs
+				</h2>
+			{% endif %}
 		</div>
 
 
@@ -257,7 +260,4 @@
 			</div>
 		</div>
 	</body>
-</html></div><div id="overlayer"></div><div class="loader">
-<div class="spinner-border" role="status">
-	<span class="sr-only">Loading...</span>
-</div></div><script src="{{ asset("js/jquery-3.5.1.min.js") }}"></script><script src="{{asset("js/jquery-migrate-3.0.0.min.js")}}"></script><script src="{{asset("js/popper.min.js")}}"></script><script src="{{asset("js/bootstrap.min.js")}}"></script><script src="{{asset("js/owl.carousel.min.js")}}"></script><script src="{{asset("js/aos.js")}}"></script><script src="{{asset("js/imagesloaded.pkgd.js")}}"></script><script src="{{asset("js/isotope.pkgd.min.js")}}"></script><script src="{{asset("js/jquery.animateNumber.min.js")}}"></script><script src="{{asset("js/jquery.stellar.min.js")}}"></script><script src="{{asset("js/jquery.waypoints.min.js")}}"></script><script src="{{asset("js/jquery.fancybox.min.js")}}"></script><script src="{{asset("js/custom.js")}}"></script></body></html>
+</html></body></html></body></html></div><div id="overlayer"></div><div class="loader"><div class="spinner-border" role="status"><span class="sr-only">Loading...</span></div></div><script src="{{ asset("js/jquery-3.5.1.min.js") }}"></script><script src="{{asset("js/jquery-migrate-3.0.0.min.js")}}"></script><script src="{{asset("js/popper.min.js")}}"></script><script src="{{asset("js/bootstrap.min.js")}}"></script><script src="{{asset("js/owl.carousel.min.js")}}"></script><script src="{{asset("js/aos.js")}}"></script><script src="{{asset("js/imagesloaded.pkgd.js")}}"></script><script src="{{asset("js/isotope.pkgd.min.js")}}"></script><script src="{{asset("js/jquery.animateNumber.min.js")}}"></script><script src="{{asset("js/jquery.stellar.min.js")}}"></script><script src="{{asset("js/jquery.waypoints.min.js")}}"></script><script src="{{asset("js/jquery.fancybox.min.js")}}"></script><script src="{{asset("js/custom.js")}}"></script></body></html>
