--- a/symfony-project/templates/notification/notification_company.html.twig
+++ b/symfony-project/templates/notification/notification_company.html.twig
@@ -10,17 +10,17 @@
 		<meta name="keywords" content="Boostrap"/>
 
 
-		<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&display=swap" rel="stylesheet">
+			<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&display=swap" rel="stylesheet">
 
-		<link rel="stylesheet" href="css/bootstrap.min.css">
-		<link rel="stylesheet" href="css/owl.carousel.min.css">
-		<link rel="stylesheet" href="css/owl.theme.default.min.css">
-		<link rel="stylesheet" href="fonts/icomoon/style.css">
-		<link rel="stylesheet" href="fonts/feather/style.css">
-		<link rel="stylesheet" href="fonts/flaticon/font/flaticon.css">
-		<link rel="stylesheet" href="css/jquery.fancybox.min.css">
-		<link rel="stylesheet" href="css/aos.css">
-		<link rel="stylesheet" href="css/style.css">
+			<link rel="stylesheet" href="css/bootstrap.min.css">
+			<link rel="stylesheet" href="css/owl.carousel.min.css">
+			<link rel="stylesheet" href="css/owl.theme.default.min.css">
+			<link rel="stylesheet" href="fonts/icomoon/style.css">
+			<link rel="stylesheet" href="fonts/feather/style.css">
+			<link rel="stylesheet" href="fonts/flaticon/font/flaticon.css">
+			<link rel="stylesheet" href="css/jquery.fancybox.min.css">
+			<link rel="stylesheet" href="css/aos.css">
+			<link rel="stylesheet" href="css/style.css">
 
 		<title>Notifications Développeurs</title>
 	</head>
@@ -53,9 +53,6 @@
 									<span class="icon-notifications"></span>
 								</a>
 							</li>
-							<li>
-								<a class="text-black" href="">Statistiques</a>
-							</li>
 							<li class="has-children">
 								<a href="#" class="text-black">Mon compte</a>
 								<ul class="dropdown">
@@ -75,31 +72,34 @@
 			</nav>
 		</div>
 
-		<div class="container site-section">
-			<h1 class="mb-4">Vos Notifications
-				{{company.nom}}
-			</h1>
+		<div class="section-grey bg-light" id="blog-section" style="display:flex; flex-direction:column; justify-content:center; align-items:center; width:100vw ; padding:3rem; margin-top:5rem">
+			<div class="container">
+				<div class="row">
+					<h2 class="font-weight-bold text-center text-primary">Vos notifications
+						{{company.nom}}
 
-			<ul class="list-group">
-				{% for notification in notifications %}
-					<li class="list-group-item d-flex justify-content-between align-items-center">
-						<div>
-							<strong>{{ notification.message }}</strong><br>
-						</div>
-						<a href="{{ path('app_detail', {'id': notification.job.id}) }}" class="btn btn-primary btn-sm">
-							Voir l'offre
-						</a>
-					</li>
-				{% else %}
-					<li class="list-group-item text-center">
-						Aucune notification pour le moment.
-					</li>
-				{% endfor %}
-			</ul>
+					</h2>
+				</div>
+				<div class="container">
+					<ul class="list-group">
+
+						{% for notification in notifications %}
+							<li class="list-group-item d-flex justify-content-between align-items-center">
+								<div>
+									<strong>{{ notification.message }}</strong><br>
+								</div>
+								<a href="{{ path('developer_detail', {'id': notification.job.id}) }}" class="btn btn-primary btn-sm">
+									Voir le profil
+								</a>
+							</li>
+						{% else %}
+							<li class="list-group-item text-center">
+								Aucune notification pour le moment.
+							</li>
+						{% endfor %}
+					</ul>
+				</div>
+			</div>
 		</div>
-
 	</body>
-</html></div><div id="overlayer"></div><div class="loader">
-<div class="spinner-border" role="status">
-	<span class="sr-only">Loading...</span>
-</div></div><script src="{{ asset("js/jquery-3.5.1.min.js") }}"></script><script src="{{asset("js/jquery-migrate-3.0.0.min.js")}}"></script><script src="{{asset("js/popper.min.js")}}"></script><script src="{{asset("js/bootstrap.min.js")}}"></script><script src="{{asset("js/owl.carousel.min.js")}}"></script><script src="{{asset("js/aos.js")}}"></script><script src="{{asset("js/imagesloaded.pkgd.js")}}"></script><script src="{{asset("js/isotope.pkgd.min.js")}}"></script><script src="{{asset("js/jquery.animateNumber.min.js")}}"></script><script src="{{asset("js/jquery.stellar.min.js")}}"></script><script src="{{asset("js/jquery.waypoints.min.js")}}"></script><script src="{{asset("js/jquery.fancybox.min.js")}}"></script><script src="{{asset("js/custom.js")}}"></script></body></html>
+</html></div></body></html></div><div id="overlayer"></div><div class="loader"><div class="spinner-border" role="status"><span class="sr-only">Loading...</span></div></div><script src="{{ asset("js/jquery-3.5.1.min.js") }}"></script><script src="{{asset("js/jquery-migrate-3.0.0.min.js")}}"></script><script src="{{asset("js/popper.min.js")}}"></script><script src="{{asset("js/bootstrap.min.js")}}"></script><script src="{{asset("js/owl.carousel.min.js")}}"></script><script src="{{asset("js/aos.js")}}"></script><script src="{{asset("js/imagesloaded.pkgd.js")}}"></script><script src="{{asset("js/isotope.pkgd.min.js")}}"></script><script src="{{asset("js/jquery.animateNumber.min.js")}}"></script><script src="{{asset("js/jquery.stellar.min.js")}}"></script><script src="{{asset("js/jquery.waypoints.min.js")}}"></script><script src="{{asset("js/jquery.fancybox.min.js")}}"></script><script src="{{asset("js/custom.js")}}"></script></body></html>
