--- a/symfony-project/templates/offre/index.html.twig
+++ b/symfony-project/templates/offre/index.html.twig
@@ -112,7 +112,7 @@
 					<p class="text-muted">Trouvez les entreprises correspondant à vos critères</p>
 				</div>
 
-				<form id="matchingForm" class="bg-white p-4 m-4 shadow-sm rounded">
+				<form id="matchingForm" action="{{ path('app_search') }}" method="get" class="bg-white p-4 m-4 shadow-sm rounded">
 					<div class="row">
 						<div class="col-md-4 mb-3">
 							<label for="salary" class="form-label">Salaire minimum souhaité (€)</label>
@@ -130,50 +130,64 @@
 						</div>
 					</div>
 
-					<div class="form-group mb-3">
-						<label for="languages" class="form-label">Langages ou technologies</label>
-						<select id="languages" name="languages[]" class="form-control" multiple>
-							<option value="python">Python</option>
-							<option value="javascript">JavaScript</option>
-							<option value="java">Java</option>
-							<option value="php">PHP</option>
-							<option value="csharp">C#</option>
-						</select>
-						<small class="form-text text-muted">Maintenez Ctrl ou Cmd pour sélectionner plusieurs options</small>
-					</div>
-
+					{# <div class="form-group mb-3">
+											<label for="languages" class="form-label">Langages ou technologies</label>
+											<select id="languages" name="languages[]" class="form-control" multiple>
+												<option value="python">Python</option>
+												<option value="javascript">JavaScript</option>
+												<option value="java">Java</option>
+												<option value="php">PHP</option>
+												<option value="csharp">C#</option>
+											</select>
+											<small class="form-text text-muted">Maintenez Ctrl ou Cmd pour sélectionner plusieurs options</small>
+										</div> #}
 
 					<div class="text-center">
-						<button type="button" id="matchButton" class="btn btn-primary">Trouver des entreprises</button>
+						<button type="submit" class="btn btn-primary">Trouver des entreprises</button>
 					</div>
 				</form>
-			</div>
-			<div class="container">
-				<div class="row">
-					{% for fiche in fiches_de_poste %}
-						<div class="col-md-6 col-lg-4 mb-4">
-							<div class="card shadow-sm p-3">
-								<img src="https://www.digital-aquitaine.com/wp-content/uploads/2024/12/CAPGEMINI47976684200187.png" class="card-img-top" alt="Offre Image">
-								<div class="card-body">
-									<h3>
-										{{ fiche.entreprise.nom }}</h3>
 
-									<h5 class="card-title">{{ fiche.titre }}</h5>
-									<p class="card-text">
-										{{ fiche.description }}
-										<br>
-										{{ fiche.localisation }}
-									</p>
-								</div>
-								<div class="ontainer">
-									<a href="{{ path('developer_add_fiche_favoris', { ficheId: fiche.id }) }}" class="btn btn-success">Ajouter favoris</a>
-									<a href="{{ path('app_detail', {'id': fiche.id}) }}" class="btn btn-primary btn-sm">Voir l'offre</a>
+
+			</div>
+			<div class="container mt-4">
+				<h2>Résultats de recherche</h2>
+				<div class="row">
+					{% if fiches_de_poste|length > 0 %}
+						{% for fiche in fiches_de_poste %}
+							<div class="col-md-6 col-lg-4 mb-4">
+								<div class="card shadow-sm p-3">
+									<img src="https://www.digital-aquitaine.com/wp-content/uploads/2024/12/CAPGEMINI47976684200187.png" class="card-img-top" alt="Offre Image">
+									<div class="card-body">
+										<h5 class="card-title">{{ fiche.titre }}</h5>
+										<p class="card-text">
+											<strong>Description :</strong>
+											{{ fiche.description }}<br>
+											<strong>Localisation :</strong>
+											{{ fiche.localisation }}<br>
+											<strong>Salaire proposé :</strong>
+											{{ fiche.salairePropose }}
+											€<br>
+											<strong>Niveau d'expérience :</strong>
+											{{ fiche.niveauExperience }}<br>
+											<strong>Technologies :</strong>
+											{{ fiche.technologies }}
+										</p>
+									</div>
+									<div class="ontainer">
+										<a href="{{ path('developer_add_fiche_favoris', { ficheId: fiche.id }) }}" class="btn btn-success">Ajouter favoris</a>
+										<a href="{{ path('app_detail', {'id': fiche.id}) }}" class="btn btn-primary btn-sm">Voir l'offre</a>
+									</div>
 								</div>
 							</div>
-						</div>
-					{% endfor %}
+						{% endfor %}
+					{% else %}
+						<li class="list-group-item text-center">
+							Aucun résultat trouvé pour ces critères.
+						</li>
+					{% endif %}
 				</div>
 			</div>
+
 		</div>
 
 
@@ -277,9 +291,16 @@
 			</div>
 		</div>
 
+
 	</body>
 </html></div><div id="overlayer"></div><div class="loader">
 <div class="spinner-border" role="status">
 	<span class="sr-only">Loading...</span>
 
-</div></div><script src="{{ asset("js/jquery-3.5.1.min.js") }}"></script><script src="{{asset("js/jquery-migrate-3.0.0.min.js")}}"></script><script src="{{asset("js/popper.min.js")}}"></script><script src="{{asset("js/bootstrap.min.js")}}"></script><script src="{{asset("js/owl.carousel.min.js")}}"></script><script src="{{asset("js/aos.js")}}"></script><script src="{{asset("js/imagesloaded.pkgd.js")}}"></script><script src="{{asset("js/isotope.pkgd.min.js")}}"></script><script src="{{asset("js/jquery.animateNumber.min.js")}}"></script><script src="{{asset("js/jquery.stellar.min.js")}}"></script><script src="{{asset("js/jquery.waypoints.min.js")}}"></script><script src="{{asset("js/jquery.fancybox.min.js")}}"></script><script src="{{asset("js/custom.js")}}"></script></body></html>
+</div></div><script src="{{ asset("js/jquery-3.5.1.min.js") }}"></script><script src="{{asset("js/jquery-migrate-3.0.0.min.js")}}"></script><script src="{{asset("js/popper.min.js")}}"></script><script src="{{asset("js/bootstrap.min.js")}}"></script><script src="{{asset("js/owl.carousel.min.js")}}"></script><script src="{{asset("js/aos.js")}}"></script><script src="{{asset("js/imagesloaded.pkgd.js")}}"></script><script src="{{asset("js/isotope.pkgd.min.js")}}">
+<script src="{{asset("js/search.js")}}"></script>
+<script src="{{asset("js/jquery.animateNumber.min.js")}}"></script>
+<script src="{{asset("js/jquery.stellar.min.js")}}"></script>
+<script src="{{asset("js/jquery.waypoints.min.js")}}"></script>
+<script src="{{asset("js/jquery.fancybox.min.js")}}"></script>
+<script src="{{asset("js/custom.js")}}"></script></body></html>
